Stats checking timing fixes; IE styling fixes

--- a/StorefrontDemo/src/main/webapp/admin/index.html
+++ b/StorefrontDemo/src/main/webapp/admin/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+
 <title></title>
 <link rel="shortcut icon" href="favicon.ico"></link>
 
