Region menu; URL detection and region switching

--- a/StorefrontDemo/src/main/webapp/admin/index.html
+++ b/StorefrontDemo/src/main/webapp/admin/index.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-
 <title></title>
-<link rel="shortcut icon" href="favicon.ico"></link>
+<link rel="shortcut icon" href="favicon.ico" />
 
 <link rel="stylesheet" type="text/css" href="ext-js/resources/css/ext-all.css" />
 <link rel="stylesheet" type="text/css" href="css/theme.css" />
